# depot

./: .rusty-hook.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  tarpaulin.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  plugins-release.yml  release.yml  wiki-sync.yml
benches/: performance_benchmarks.rs
coverage/: lcov.info
crates/depot-bundle/: Cargo.toml
crates/depot-bundle/src/: bundle.rs  main.rs
crates/depot-bundle/src/bundler/: core.rs  minifier.rs  parser.rs  resolver.rs  tree_shaker.rs
crates/depot-core/: Cargo.toml
crates/depot-core/src/: lib.rs
crates/depot-core/src/core/: credentials.rs  error.rs  error_help.rs  mod.rs  path.rs  version.rs
crates/depot-core/src/package/: manifest.rs
crates/depot-core/src/path_setup/: loader.rs  runner.rs
crates/depot-watch/: Cargo.toml
crates/depot-watch/src/: main.rs  watch.rs  websocket.rs
crates/lpm-core/src/core/: credentials.rs  version.rs
crates/lpm-core/src/package/: manifest.rs
crates/lpm-core/src/path_setup/: runner.rs
docs/contributing/: Architecture.md  Contributing.md  Creating-Releases.md  Development-Setup.md  Git-Hooks.md  GitHub-Actions.md  Plugin-Development.md  Release-Process.md  Testing.md  Wiki-Sync-Setup.md
docs/user/: CLI-Commands.md  Getting-Started.md  Home.md  Installation.md  Lua-Version-Manager.md  Package-Management.md  Plugins.md  Rust-Extensions.md  Security.md  Templates.md  Troubleshooting.md
scripts/: build-installer.sh  test-all.sh  update-coverage-badge.sh
src/: lib.rs  main.rs
src/cache/: mod.rs
src/cli/: audit.rs  build.rs  clean.rs  compat.rs  exec.rs  generate_rockspec.rs  init.rs  install.rs  list.rs  login.rs  lua.rs  mod.rs  new.rs  outdated.rs  package.rs  publish.rs  remove.rs  run.rs  update.rs  verify.rs  workspace.rs
src/cli/plugin/: commands.rs  config.rs  installer.rs  metadata.rs  mod.rs  registry.rs
src/cli/template/: commands.rs  discovery.rs  metadata.rs  renderer.rs
src/config/: mod.rs
src/core/: mod.rs  path.rs  path_setup.rs
src/di/: container.rs  mocks.rs  mod.rs  traits.rs
src/github/: client.rs  mod.rs  types.rs
src/lua_analysis/: compat_db.rs  mod.rs  report.rs  scanner.rs
src/lua_manager/: downloader.rs  switcher.rs  versions.rs  wrappers.rs
src/lua_version/: compatibility.rs  constraint.rs  detector.rs  mod.rs
src/luarocks/: client.rs  manifest.rs  rockspec.rs  rockspec_parser.rs  search_api.rs  version.rs
src/package/: checksum.rs  conflict_checker.rs  converter.rs  downloader.rs  extractor.rs  installer.rs  interactive.rs  lockfile.rs  lockfile_builder.rs  metadata.rs  mod.rs  packager.rs  rollback.rs  update_diff.rs  validator.rs  verifier.rs
src/path_setup/: mod.rs
src/publish/: packager.rs  publisher.rs  rockspec_generator.rs  validator.rs
src/resolver/: dependency_graph.rs  dependency_resolver.rs  mod.rs
src/security/: advisory.rs  audit.rs  osv.rs  vulnerability.rs
src/templates/basic-lua/: README.md
src/templates/cli-tool/: README.md
src/templates/lapis-web/: README.md
src/templates/love2d/: README.md
src/templates/neovim-plugin/: README.md
src/workspace/: filter.rs  finder.rs  mod.rs  workspace_config.rs
tests/: e2e_tests.rs  integration_tests.rs
tests/e2e/: audit.rs  global.rs  init.rs  install.rs  interactive.rs  list.rs  lua_version.rs  mod.rs  plugins.rs  real_packages.rs  remove.rs  templates.rs  update.rs  verify.rs  workflow.rs
tests/fixtures/lua-scripts/: test-require.lua
tests/integration/: audit.rs  build.rs  clean.rs  common.rs  error_recovery.rs  exec.rs  generate_rockspec.rs  init.rs  install.rs  install_comprehensive.rs  interactive.rs  list.rs  login.rs  lua.rs  mod.rs  outdated.rs  package.rs  plugin.rs  publish.rs  remove.rs  run.rs  security.rs  template.rs  update.rs  verify.rs
