[workspace]
members = ["crates/depot-core", "crates/depot-watch"]
resolver = "2"

[package]
name = "depot"
version = "0.1.0"
edition = "2021"
authors = ["Depot Contributors"]
description = "Local package management for Lua. Because global installs are legacy."
license = "MIT"
repository = "https://github.com/yourusername/depot"

[[bin]]
name = "depot"
path = "src/main.rs"

[dependencies]
# Core Depot library
depot-core = { path = "crates/depot-core" }

# CLI and argument parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for downloading packages
# Using rustls-tls instead of native-tls for better cross-compilation support
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "rustls-tls"], default-features = false }

# YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Path handling
pathdiff = "0.2"
dirs = "6.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# File I/O and utilities
walkdir = "2.4"
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"
regex = "1.10"
base64 = "0.22"

# Archive extraction
flate2 = "1.0"
tar = "0.4"
zip = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Platform-specific keychain support (for credentials)
keyring = "3.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Progress indicators
indicatif = "0.17"

# Plugin discovery
which = "5.0"

# URL encoding for API requests
urlencoding = "2.1"

# Interactive prompts for UX improvements
dialoguer = "0.11"
fuzzy-matcher = "0.3"

# Async trait support for dependency injection
async-trait = "0.1"

# Lua source code parsing (for version compatibility analysis)
luanext-parser = { git = "https://github.com/forge18/luanext-parser.git", default-features = false }

# Package management
# (serde and serde_yaml already included above)

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
rusty-hook = "0.11.2"
serial_test = "3.0"
mockall = "0.13"

# E2E testing dependencies
assert_cmd = "2.0"      # Test CLI binaries
assert_fs = "1.0"       # Temporary file systems
predicates = "3.0"      # Flexible assertions
wiremock = "0.6"        # Mock HTTP server (optional, for offline tests)

# Unix-only: Terminal interaction testing (PTY not available on Windows)
[target.'cfg(unix)'.dev-dependencies]
rexpect = "0.5"

[[bench]]
name = "performance_benchmarks"
harness = false
